tests/censoredusername/fail/integer_bounds/slide_2^63.wsa
; Fails on 64-bit (and 32-bit) machines
slide 9223372036854775808
