tests/censoredusername/fail/integer_bounds/slide_2^63.err
Error: At index 40 (line 2, column 1):
Slide argument too large: 9223372036854775808
